src/main.css
/* ... */
.panel input[type="range"] {
    -webkit-appearance: none;
    vertical-align: middle;
    width: 60%;

    background: transparent;
    outline: none;

    font: inherit;
    color: inherit;
}

.panel input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 20px; height: 20px;
    margin-top: calc(-4px);

    background: hsl(0, 0%, 16%);
    border: hsl(0, 0%, 28%) solid 1px;
    border-radius: 20px;
}

.panel input[type="range"]::after {
    content: attr(value);
    display: inline-block;
    width: 20px;

    text-align: right;
}

.panel input[type="range"]::-moz-range-thumb {
    width: 20px; height: 20px;
    margin-top: calc(-4px);

    background: hsl(0, 0%, 16%);
    border: hsl(0, 0%, 28%) solid 1px;
    border-radius: 20px;
}

.panel input[type="range"]:hover::-webkit-slider-thumb {
    background: hsl(0, 0%, 18%);
}

.panel input[type="range"]:hover::-moz-range-thumb {
    background: hsl(0, 0%, 18%);
}

.panel input[type="range"]::-webkit-slider-runnable-track {
    width: 100%; height: 14px;

    background: hsl(0, 0%, 16%);
    border: hsl(0, 0%, 28%) solid 1px;
    border-radius: 14px;
}

.panel input[type="range"]::-moz-range-track {
    width: 100%; height: 14px;

    background: hsl(0, 0%, 16%);
    border: hsl(0, 0%, 28%) solid 1px;
    border-radius: 14px;
}

.panel input[type="range"]:active::-webkit-slider-thumb {
    background: hsl(0, 0%, 14%);
}

.panel input[type="range"]:active::-moz-range-thumb {
    background: hsl(0, 0%, 14%);
}

.panel input[type="range"]:disabled::after {
    visibility: hidden;
}

.panel input[type="range"]:disabled::-webkit-slider-thumb,
.panel input[type="range"]:disabled::-webkit-slider-runnable-track {
    background: hsl(0, 0%, 20%);
    border-color: hsl(0, 0%, 28%);
}

.panel input[type="range"]:disabled::-moz-range-thumb,
.panel input[type="range"]:disabled::-moz-range-track {
    background: hsl(0, 0%, 20%);
    border-color: hsl(0, 0%, 28%);
}

.panel .bottom {
    position: absolute;
    width: 100%;
    left: 0; bottom: 0;
    height: calc(114px - 8px);
    padding: 0 8px;
    overflow: auto;
}

.panel button {
    position: relative;
    display: block;
    width: 100%; height: 30px;
    margin: 8px 0;

    background: hsl(0, 0%, 20%);
    border: hsl(0, 0%, 36%) solid 1px;
    border-radius: 2px;
    outline: none;

    font: inherit;
    color: hsl(0, 0%, 96%);
}

.panel button:hover {
    background: hsl(0, 0%, 24%);
}

.panel button:active {
    background: hsl(0, 0%, 16%);
}

.panel button:disabled {
    background: transparent;
    border-color: hsl(0, 0%, 28%);

    color: hsl(0, 0%, 28%);
}

.panel .success-indicator {
    display: inline-block;
    vertical-align: middle;
    margin-left: 8px;
    width: 18px; height: 18px;

    background: hsl(0, 0%, 36%);
    border-radius: 100%;

    color: hsl(0, 0%, 16%);
    text-align: center;
    line-height: 18px;

    transform: scale(0);

    transition: transform 0.2s;
}

.panel .success-indicator.unknown,
.panel .success-indicator.success,
.panel .success-indicator.failure {
    transform: scale(1);
}

.panel .success-indicator.success::before {
    content: "✓";
}

.panel .success-indicator.failure::before {
    content: "✕";
}

/* The toolbar */

.toolbar {
    position: fixed;
    height: 48px;
    left: 40%; bottom: 16px;
    transform: translateX(-50%);
    z-index: 100;

    background: hsl(0, 0%, 16%);
    border-radius: 2px;
    overflow: hidden;

    color: hsl(0, 0%, 96%);

    transition: opacity 0.1s;
}

.ui:not(.default) .toolbar {
    opacity: 0.2;

    pointer-events: none;
}

.toolbar .action {
    position: relative;
    vertical-align: middle;
    width: 48px; height: 48px;

    background: transparent;
    border: none;
    outline: none;

    font: inherit;
    text-align: center;
    font-size: 24px;
    color: inherit;
    white-space: nowrap;

    cursor: default;
    user-select: none;
}

.toolbar .action:hover {
    background: hsl(0, 0%, 28%);
}

.toolbar .action:active {
    background: hsl(200, 100%, 40%);
}

.toolbar .action:disabled {
    background: transparent;

    color: hsl(0, 0%, 64%);
}

.toolbar .action:disabled .name, .toolbar .action:disabled .shortcut {
    color: hsl(0, 0%, 64%);
}

.toolbar .action .flip {
    display: inline-block;
    transform: scaleX(-1);
}

.toolbar .action.flash {
    animation: background-flash 0.6s ease-in;
}

@keyframes background-flash {
    from {
        background: hsl(200, 100%, 40%);
    }
}

.toolbar .action .name, .toolbar .action .shortcut {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);

    font-size: 8px;
    line-height: 8px;
    color: hsl(0, 0%, 80%);
}

.toolbar .action .name {
    top: 6px;
}

.toolbar .action .shortcut {
    bottom: 4px;
}

/* Modal elements */

.export {
    position: fixed;
    width: 80%; height: 100%;
    left: 0;
    z-index: 100;
    padding: 20px 24px;

    background: hsla(0, 0%, 10%, 0.8);
}

.export .warning {
    display: inline-block;
    width: 100%;
    background: hsla(50, 100%, 70%, 1);
    padding: 8pt;
    margin-bottom: 8pt;

    border-radius: 2px;
}

.export .warning.hidden {
    display: none;
}

.export .warning ul {
    margin: 4pt 0;

    list-style-type: circle;
}

.export .code {
    font: 16px monospace;
    color: white;

    white-space: pre-wrap;
    overflow-wrap: break-word;
    tab-size: 4;
    -moz-tab-size: 4;
}

/* Arrows */

.arrow > svg {
    position: absolute;
    left: 0;
    top: 0;
    overflow: visible;
    pointer-events: none;
}

.arrow > svg:first-child {
    z-index: 1;
}

.arrow > svg:nth-child(2) {
    z-index: 3;
}

.arrow:not(.reconnecting) > svg:first-child > path {
    pointer-events: all;
}

.arrow:not(.selected) > svg:first-child > path {
    opacity: 0;
}

.arrow:not(.selected) > svg:first-child > path:hover {
    opacity: 0.5;
}

.arrow-endpoint {
    display: none;
    pointer-events: all;
}
/* ... */

